add blocks in project.html

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
         </div>
       </div>
     </section>
-    <!-- <section class="articles" data-scroll-section>
+    <section class="articles" data-scroll-section>
       <div class="main__border"></div>
       <div class="container articles__container">
         <div class="articles__block">
@@ -592,7 +592,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <footer class="footer" data-scroll-section>
       <div class="container footer__container">
         <div class="footer__block">
