--- a/project.html
+++ b/project.html
@@ -161,30 +161,7 @@
       </div>
       <div class="container project_desktop__container">
         <div class="project_desktop__slider">
-          <svg class="project_desktop__notebook" width="1152" height="642" viewBox="0 0 1152 642" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M140.73 28C123.758 28 110 41.1356 110 57.3393V630H1043V57.3393C1043 41.1357 1029.24 28 1012.27 28H140.73ZM988.273 48.5197H163.487C146.515 48.5197 132.757 61.6553 132.757 77.859V620.656H1019V77.859C1019 61.6553 1005.24 48.5197 988.273 48.5197Z" fill="#1A202C"/>
-            <path d="M0 623.73H1152V629.82C1152 629.82 1099.53 642 1040 642C980.465 642 171.535 641.391 112 641.391C52.4651 641.391 0 629.82 0 629.82V623.73Z" fill="url(#paint0_linear_454_3281)"/>
-            <path d="M0 624.159C0 623.548 0.494661 623.054 1.10486 623.054H1150.9C1151.51 623.054 1152 623.548 1152 624.159V629.82H0V624.159Z" fill="url(#paint1_linear_454_3281)"/>
-            <path d="M490.419 623.054H662.326C662.326 626.791 659.297 629.82 655.56 629.82H497.185C493.448 629.82 490.419 626.791 490.419 623.054Z" fill="url(#paint2_linear_454_3281)"/>
-            <defs>
-              <linearGradient id="paint0_linear_454_3281" x1="576" y1="623.73" x2="576" y2="642" gradientUnits="userSpaceOnUse">
-                <stop stop-color="#80868A"/>
-                <stop offset="1" stop-color="#2A2C2F"/>
-              </linearGradient>
-              <linearGradient id="paint1_linear_454_3281" x1="2.41981e-06" y1="626.436" x2="1152" y2="626.436" gradientUnits="userSpaceOnUse">
-                <stop stop-color="#2A2C2F"/>
-                <stop offset="0.208333" stop-color="#80868A"/>
-                <stop offset="0.770833" stop-color="#80868A"/>
-                <stop offset="1" stop-color="#2A2C2F"/>
-              </linearGradient>
-              <linearGradient id="paint2_linear_454_3281" x1="490.419" y1="626.437" x2="662.326" y2="626.437" gradientUnits="userSpaceOnUse">
-                <stop stop-color="#2A2C2F"/>
-                <stop offset="0.229167" stop-color="#80868A"/>
-                <stop offset="0.802083" stop-color="#80868A"/>
-                <stop offset="1" stop-color="#2A2C2F"/>
-              </linearGradient>
-            </defs>
-          </svg>
+          <img class="project_desktop__notebook" src="img/project/notebook.svg" alt="">
           <div class="project_desktop__swiper swiper-container">
             <ul class="project_desktop__list swiper-wrapper">
               <li class="project_desktop__item swiper-slide">
@@ -201,6 +178,59 @@
           </div>
           <div class="project_desktop__navigation">
             <div class="swiper-pagination project_desktop__pagination"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="project_phone" data-scroll-section>
+      <div class="main__border"></div>
+      <div class="container project_banner__container">
+        <div class="project_phone__block">
+          <div class="project__info">
+            <div class="project__info_left">
+              <h4 class="project__head">phone версия</h4>
+            </div>
+            <div class="project__info_right">
+              <p class="project__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Commodo ullamcorper a lacus vestibulum sed arcu. Suspendisse in est ante in nibh mauris cursus mattis molestie. Risus sed vulputate odio ut. Orci phasellus egestas tellus rutrum tellus pellentesque eu tincidunt. Hac habitasse platea dictumst vestibulum rhoncus. Ac turpis egestas integer eget. Auctor eu augue ut lectus arcu. Id consectetur purus ut faucibus. Justo laoreet sit amet cursus sit amet dictum sit. Ac odio tempor orci dapibus ultrices. Tempor orci eu lobortis elementum nibh tellus. Urna duis convallis convallis tellus id interdum velit laoreet</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container project_phone__container">
+        <div class="project_phone_flex">
+          <div class="project_phone__swiper swiper-container loading">
+            <ul class="project_phone__list swiper-wrapper">
+              <li class="project_phone_item swiper-slide">
+                <img class="project_phone__img" src="img/project/phone.svg" alt="">
+                <div class="project_phone_block">
+                  <img src="img/project/project_1/project_phone_1.webp" alt="">
+                </div>
+              </li>
+              <li class="project_phone_item swiper-slide">
+                <img class="project_phone__img" src="img/project/phone.svg" alt="">
+                <div class="project_phone_block">
+                  <img src="img/project/project_1/project_phone_2.webp" alt="">
+                </div>
+              </li>
+              <li class="project_phone_item swiper-slide">
+                <img class="project_phone__img" src="img/project/phone.svg" alt="">
+                <div class="project_phone_block">
+                  <img src="img/project/project_1/project_phone_3.webp" alt="">
+                </div>
+              </li>
+              <li class="project_phone_item swiper-slide">
+                <img class="project_phone__img" src="img/project/phone.svg" alt="">
+                <div class="project_phone_block">
+                  <img src="img/project/project_1/project_phone_4.webp" alt="">
+                </div>
+              </li>
+              <li class="project_phone_item swiper-slide">
+                <img class="project_phone__img" src="img/project/phone.svg" alt="">
+                <div class="project_phone_block">
+                  <img src="img/project/project_1/project_phone_5.webp" alt="">
+                </div>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
