--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
           </div>
           <ul class="projects__list">
             <li class="projects__item">
-              <a href="#" class="projects__link">
+              <a href="project.html" class="projects__link">
                 <div class="projects__image">
                   <img src="img/projects/projects_1.webp" alt="">
                   <div class="btn__arrow projects__arrow">
@@ -341,7 +341,7 @@
               </a>
             </li>
             <li class="projects__item">
-              <a href="#" class="projects__link">
+              <a href="project.html" class="projects__link">
                 <div class="projects__image">
                   <img src="img/projects/projects_2.webp" alt="">
                   <div class="btn__arrow projects__arrow">
@@ -383,7 +383,7 @@
           </div>
           <ul class="projects__list">
             <li class="projects__item">
-              <a href="#" class="projects__link">
+              <a href="project.html" class="projects__link">
                 <div class="projects__image">
                   <img src="img/projects/projects_3.webp" alt="">
                   <div class="btn__arrow projects__arrow">
@@ -406,7 +406,7 @@
               </a>
             </li>
             <li class="projects__item">
-              <a href="#" class="projects__link">
+              <a href="project.html" class="projects__link">
                 <div class="projects__image">
                   <img src="img/projects/projects_4.webp" alt="">
                   <div class="btn__arrow projects__arrow">
@@ -448,7 +448,7 @@
           </div>
           <ul class="projects__list">
             <li class="projects__item">
-              <a href="#" class="projects__link">
+              <a href="project.html" class="projects__link">
                 <div class="projects__image">
                   <img src="img/projects/projects_5.webp" alt="">
                   <div class="btn__arrow projects__arrow">
@@ -471,7 +471,7 @@
               </a>
             </li>
             <li class="projects__item">
-              <a href="#" class="projects__link">
+              <a href="project.html" class="projects__link">
                 <div class="projects__image">
                   <img src="img/projects/projects_6.webp" alt="">
                   <div class="btn__arrow projects__arrow">
