--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
     <section class="showreel" data-scroll-section data-persistent data-scroll-section-inview>
       <div class="main__border"></div>
       <div class="container showreel__container">
-        <div class="showreel__inview" data-scroll data-scroll-repeat>
-          <div class="showreel__target" id="showreel__target"></div>
-          <button class="showreel__button" data-scroll data-scroll-sticky data-scroll-target="#showreel__target">
-            <div class="showreel__block">
+        <div class="showreel__inview inview" data-scroll data-scroll-repeat>
+          <div class="showreel__target inview__target" id="showreel__target"></div>
+          <button class="showreel__button inview__flex" data-scroll data-scroll-sticky data-scroll-target="#showreel__target">
+            <div class="showreel__block inview__block">
               <video poster="img/main/showreel.webp" playsinline autoplay muted loop>
                 <source src="img/main/showreel.mp4" type="video/mp4">
               </video>
