--- a/project.html
+++ b/project.html
@@ -141,8 +141,16 @@
           </div>
         </div>
       </div>
-      <div class="project_banner__image">
-        <img src="img/project/project_1/project_banner.webp" alt="">
+    </section>
+    <section class="project_banner" data-scroll-section data-persistent data-scroll-section-inview>
+      <div class="main__border"></div>
+      <div class="project_banner__inview inview" data-scroll data-scroll-repeat>
+        <div class="project_banner__target inview__target" id="project_banner__target"></div>
+        <div class="project_banner__button inview__flex" data-scroll data-scroll-sticky data-scroll-target="#project_banner__target">
+          <div class="project_banner__block inview__block">
+            <img src="img/project/project_1/project_banner.webp" alt="">
+          </div>
+        </div>
       </div>
     </section>
     <section class="project_desktop" data-scroll-section>
