--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
     </svg>
     <div class="preloader__bottom"></div>
   </div>
-  <div class="cursor"></div>
+  <div class="cursor">
+    <div class="cursor__block">
+      <div class="cursor__wrapper">
+        <div class="cursor__text">DRAG</div>
+      </div>
+      <div class="cursor__left"></div>
+      <div class="cursor__right"></div>
+    </div>
+  </div>
   <header class="header">
     <div class="header__progress">
       <div class="header__progress_bar"></div>
@@ -509,7 +517,7 @@
             </button>
           </div>
           <div class="articles__slider">
-            <div class="articles__swiper swiper-container">
+            <div class="articles__swiper swiper">
               <ul class="articles__list swiper-wrapper">
                 <li class="articles__item swiper-slide">
                   <a href="#" class="articles__link">
@@ -543,6 +551,18 @@
                     </div>
                     <div class="articles__info">
                       <h4 class="articles__head">Как создать команду мечты</h4>
+                      <p class="articles__desc">Немного о наших  долгих поисках названия в тчении 2х лет Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. О его собрал силуэт назад вдали пояс предупредила повстречался правилами до города грустный свой запятой своих меня, однажды агентство ipsum.</p>
+                    </div>
+                  </a>
+                </li>
+                <li class="articles__item swiper-slide">
+                  <a href="#" class="articles__link">
+                    <div class="articles__image">
+                      <img src="img/articles/articles_4.webp" alt="">
+                      <span class="articles__date">31.07.2023</span>
+                    </div>
+                    <div class="articles__info">
+                      <h4 class="articles__head">Работаем и отдыхаем на бали</h4>
                       <p class="articles__desc">Немного о наших  долгих поисках названия в тчении 2х лет Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. О его собрал силуэт назад вдали пояс предупредила повстречался правилами до города грустный свой запятой своих меня, однажды агентство ipsum.</p>
                     </div>
                   </a>
