--- a/project.html
+++ b/project.html
@@ -35,7 +35,15 @@
     </svg>
     <div class="preloader__bottom"></div>
   </div>
-  <div class="cursor"></div>
+  <div class="cursor">
+    <div class="cursor__block">
+      <div class="cursor__wrapper">
+        <div class="cursor__text">DRAG</div>
+      </div>
+      <div class="cursor__left"></div>
+      <div class="cursor__right"></div>
+    </div>
+  </div>
   <header class="header">
     <div class="header__progress">
       <div class="header__progress_bar"></div>
@@ -170,7 +178,7 @@
       <div class="container project_desktop__container">
         <div class="project_desktop__slider">
           <img class="project_desktop__notebook" src="img/project/notebook.svg" alt="">
-          <div class="project_desktop__swiper swiper-container">
+          <div class="project_desktop__swiper swiper">
             <ul class="project_desktop__list swiper-wrapper">
               <li class="project_desktop__item swiper-slide">
                 <div class="project_desktop__image">
