--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,15 @@
     </svg>
     <div class="preloader__bottom"></div>
   </div>
-  <div class="cursor"></div>
+  <div class="cursor">
+    <div class="cursor__block">
+      <div class="cursor__wrapper">
+        <div class="cursor__text">DRAG</div>
+      </div>
+      <div class="cursor__left"></div>
+      <div class="cursor__right"></div>
+    </div>
+  </div>
   <header class="header">
     <div class="header__progress">
       <div class="header__progress_bar"></div>
