--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,8 @@
   <div class="cursor">
     <div class="cursor__block">
       <div class="cursor__wrapper">
-        <div class="cursor__text">DRAG</div>
+        <div class="cursor__text cursor__text_slider"><p>ЗАЖМИ</p></div>
+        <div class="cursor__text cursor__text_showreel"><p>ОТКРЫТЬ</p></div>
       </div>
       <div class="cursor__left"></div>
       <div class="cursor__right"></div>
