--- a/project.html
+++ b/project.html
@@ -178,7 +178,9 @@
       </div>
       <div class="container project_desktop__container">
         <div class="project_desktop__slider">
-          <img class="project_desktop__notebook" src="img/project/notebook.svg" alt="">
+          <div class="project_desktop__img">
+            <img src="img/project/notebook.svg" alt="">
+          </div>
           <div class="project_desktop__swiper swiper">
             <ul class="project_desktop__list swiper-wrapper">
               <li class="project_desktop__item swiper-slide">
@@ -215,7 +217,7 @@
       </div>
       <div class="container project_phone__container">
         <div class="project_phone_flex">
-          <div class="project_phone__swiper swiper-container loading">
+          <div class="project_phone__swiper swiper">
             <ul class="project_phone__list swiper-wrapper">
               <li class="project_phone_item swiper-slide">
                 <img class="project_phone__img" src="img/project/phone.svg" alt="">
@@ -239,6 +241,18 @@
                 <img class="project_phone__img" src="img/project/phone.svg" alt="">
                 <div class="project_phone_block">
                   <img src="img/project/project_1/project_phone_4.webp" alt="">
+                </div>
+              </li>
+              <li class="project_phone_item swiper-slide">
+                <img class="project_phone__img" src="img/project/phone.svg" alt="">
+                <div class="project_phone_block">
+                  <img src="img/project/project_1/project_phone_5.webp" alt="">
+                </div>
+              </li>
+              <li class="project_phone_item swiper-slide">
+                <img class="project_phone__img" src="img/project/phone.svg" alt="">
+                <div class="project_phone_block">
+                  <img src="img/project/project_1/project_phone_5.webp" alt="">
                 </div>
               </li>
               <li class="project_phone_item swiper-slide">
