add project slider

--- a/index.html
+++ b/index.html
@@ -733,12 +733,12 @@
           <div class="header__nav_flex">
             <ul class="header__nav_list">
               <li class="header__nav_item">
-                <a href="index.html" class="header__nav_link">
+                <a href="services.html" class="header__nav_link">
                   <h3 class="text text__big"><span class="text__rotate">Услуги</span></h3>
                 </a>
               </li>
               <li class="header__nav_item">
-                <a href="projects.html" class="header__nav_link">
+                <a href="team.html" class="header__nav_link">
                   <h3 class="text text__big"><span class="text__rotate">Команда</span></h3>
                 </a>
               </li>
