--- a/projects.html
+++ b/projects.html
@@ -86,8 +86,8 @@
         </button>
         <div class="header__right">
           <div class="header__links">
-            <a class="header__link text text__big" href="#"><span class="text__rotate">Команда</span></a>
-            <a class="header__link text text__big" href="#"><span class="text__rotate">Проекты</span></a>
+            <a class="header__link text text__big" href="team.html"><span class="text__rotate">Команда</span></a>
+            <a class="header__link text text__big" href="projects.html"><span class="text__rotate">Проекты</span></a>
           </div>
           <div class="header__buttons">
             <button class="btn button__project">
@@ -461,17 +461,17 @@
           <div class="header__nav_flex">
             <ul class="header__nav_list">
               <li class="header__nav_item">
-                <a href="index.html" class="header__nav_link">
+                <a href="services.html" class="header__nav_link">
                   <h3 class="text text__big"><span class="text__rotate">Услуги</span></h3>
                 </a>
               </li>
               <li class="header__nav_item">
-                <a href="projects.html" class="header__nav_link">
+                <a href="team.html" class="header__nav_link">
                   <h3 class="text text__big"><span class="text__rotate">Команда</span></h3>
                 </a>
               </li>
               <li class="header__nav_item">
-                <a href="services.html" class="header__nav_link">
+                <a href="projects.html" class="header__nav_link">
                   <h3 class="text text__big"><span class="text__rotate">Проекты</span></h3>
                 </a>
               </li>
