--- a/project.html
+++ b/project.html
@@ -269,7 +269,7 @@
     <section class="projects" data-scroll-section>
       <div class="projects__block">
         <div class="main__border"></div>
-        <div class="container projects__container">
+        <div class="container projects__swiper_container">
           <div class="projects__flex">
             <h3 class="projects__head">Похожие кейсы</h3>
             <div class="projects__right">
