--- a/project.html
+++ b/project.html
@@ -266,9 +266,8 @@
         </div>
       </div>
     </section>
-    <section class="projects" data-scroll-section>
+    <section class="projects projects__border" data-scroll-section>
       <div class="projects__block">
-        <div class="main__border"></div>
         <div class="container projects__swiper_container">
           <div class="projects__flex">
             <h3 class="projects__head">Похожие кейсы</h3>
