--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,15 @@
   <div class="cursor">
     <div class="cursor__block">
       <div class="cursor__wrapper">
-        <div class="cursor__text cursor__text_slider"><p>ЗАЖМИ</p></div>
+        <div class="cursor__text cursor__text_slider">
+          <p>
+            <svg width="80" height="26" viewBox="0 0 80 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M0.545556 14.0454C-0.18185 13.5274 -0.181853 12.4726 0.545553 11.9546L16.9788 0.253285C17.8607 -0.374635 19.1034 0.236825 19.1034 1.29864V24.7014C19.1034 25.7632 17.8607 26.3746 16.9788 25.7467L0.545556 14.0454Z" fill="currentColor"/>
+              <path d="M79.4544 14.0454C80.1819 13.5274 80.1819 12.4726 79.4544 11.9546L63.0212 0.253285C62.1393 -0.374635 60.8966 0.236825 60.8966 1.29864V24.7014C60.8966 25.7632 62.1393 26.3746 63.0212 25.7467L79.4544 14.0454Z" fill="currentColor"/>
+              <path d="M45.9705 13.2336C45.9705 16.4353 43.2974 19.0308 40 19.0308C36.7026 19.0308 34.0295 16.4353 34.0295 13.2336C34.0295 10.0318 36.7026 7.43635 40 7.43635C43.2974 7.43635 45.9705 10.0318 45.9705 13.2336Z" fill="currentColor"/>
+            </svg>
+          </p>
+        </div>
         <div class="cursor__text cursor__text_showreel"><p>ОТКРЫТЬ</p></div>
       </div>
       <div class="cursor__left"></div>
