--- a/projects.html
+++ b/projects.html
@@ -358,7 +358,7 @@
               <div class="footer__mail">
                 <p class="footer__mail_info">Напишите нам:</p>
                 <a href="mailto:hello@anyera.ru" class="footer__mail_send">
-                  <h5 class="header__nav_contact_head text text__big">
+                  <h5 class="header__nav_contact_head text text__verybig">
                     <span class="text__rotate">hello@anyera.ru</span>
                   </h5>
                 </a>
