add slider team

--- a/projects.html
+++ b/projects.html
@@ -209,7 +209,7 @@
           </div>
           <ul class="projects__list">
             <li class="projects__item">
-              <a href="#" class="projects__link">
+              <a href="project.html" class="projects__link">
                 <div class="projects__image">
                   <img src="img/projects/projects_1.webp" alt="">
                   <div class="btn__arrow projects__arrow">
@@ -232,7 +232,7 @@
               </a>
             </li>
             <li class="projects__item">
-              <a href="#" class="projects__link">
+              <a href="project.html" class="projects__link">
                 <div class="projects__image">
                   <img src="img/projects/projects_2.webp" alt="">
                   <div class="btn__arrow projects__arrow">
@@ -255,7 +255,7 @@
               </a>
             </li>
             <li class="projects__item">
-              <a href="#" class="projects__link">
+              <a href="project.html" class="projects__link">
                 <div class="projects__image">
                   <img src="img/projects/projects_3.webp" alt="">
                   <div class="btn__arrow projects__arrow">
@@ -278,7 +278,7 @@
               </a>
             </li>
             <li class="projects__item">
-              <a href="#" class="projects__link">
+              <a href="project.html" class="projects__link">
                 <div class="projects__image">
                   <img src="img/projects/projects_4.webp" alt="">
                   <div class="btn__arrow projects__arrow">
@@ -301,7 +301,7 @@
               </a>
             </li>
             <li class="projects__item">
-              <a href="#" class="projects__link">
+              <a href="project.html" class="projects__link">
                 <div class="projects__image">
                   <img src="img/projects/projects_5.webp" alt="">
                   <div class="btn__arrow projects__arrow">
@@ -324,7 +324,7 @@
               </a>
             </li>
             <li class="projects__item">
-              <a href="#" class="projects__link">
+              <a href="project.html" class="projects__link">
                 <div class="projects__image">
                   <img src="img/projects/projects_6.webp" alt="">
                   <div class="btn__arrow projects__arrow">
