--- a/team.html
+++ b/team.html
@@ -165,6 +165,118 @@
         </div>
       </div>
     </section>
+    <section class="team_slider" data-scroll-section>
+      <div class="main__border"></div>
+      <div class="container team_slider__container">
+        <div class="team_slider_flex">
+          <div class="team_slider__swiper swiper">
+            <ul class="team_slider__list swiper-wrapper">
+              <li class="team_slider__item swiper-slide">
+                <div class="team_slider_block">
+                  <img src="img/team/team_1.webp" alt="">
+                </div>
+              </li>
+              <li class="team_slider__item swiper-slide">
+                <div class="team_slider_block">
+                  <img src="img/team/team_2.webp" alt="">
+                </div>
+              </li>
+              <li class="team_slider__item swiper-slide">
+                <div class="team_slider_block">
+                  <img src="img/team/team_3.webp" alt="">
+                </div>
+              </li>
+              <li class="team_slider__item swiper-slide">
+                <div class="team_slider_block">
+                  <img src="img/team/team_4.webp" alt="">
+                </div>
+              </li>
+              <li class="team_slider__item swiper-slide">
+                <div class="team_slider_block">
+                  <img src="img/team/team_5.webp" alt="">
+                </div>
+              </li>
+              <li class="team_slider__item swiper-slide">
+                <div class="team_slider_block">
+                  <img src="img/team/team_6.webp" alt="">
+                </div>
+              </li>
+              <li class="team_slider__item swiper-slide">
+                <div class="team_slider_block">
+                  <img src="img/team/team_1.webp" alt="">
+                </div>
+              </li>
+              <li class="team_slider__item swiper-slide">
+                <div class="team_slider_block">
+                  <img src="img/team/team_2.webp" alt="">
+                </div>
+              </li>
+              <li class="team_slider__item swiper-slide">
+                <div class="team_slider_block">
+                  <img src="img/team/team_3.webp" alt="">
+                </div>
+              </li>
+              <li class="team_slider__item swiper-slide">
+                <div class="team_slider_block">
+                  <img src="img/team/team_4.webp" alt="">
+                </div>
+              </li>
+              <li class="team_slider__item swiper-slide">
+                <div class="team_slider_block">
+                  <img src="img/team/team_5.webp" alt="">
+                </div>
+              </li>
+              <li class="team_slider__item swiper-slide">
+                <div class="team_slider_block">
+                  <img src="img/team/team_6.webp" alt="">
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="team_clients" data-scroll-section>
+      <div class="main__border"></div>
+      <div class="container team_clients__container">
+        <div class="team_slider__block">
+          <div class="project__info">
+            <div class="project__info_left">
+              <h4 class="project__head">Наши клиенты</h4>
+            </div>
+            <div class="project__info_right">
+              <p class="project__desc">Commitment to the highest quality production standards, a broad expertise, and a genuine strive to help our clients have secured us strategic cooperation with market-leading companies in many sectors and regions.</p>
+            </div>
+          </div>
+        </div>
+        <ul class="team_clients__list">
+          <li class="team_clients__item">
+            <img src="img/clients/clients.webp" alt="">
+          </li>
+          <li class="team_clients__item">
+            <img src="img/clients/clients.webp" alt="">
+          </li>
+          <li class="team_clients__item">
+            <img src="img/clients/clients.webp" alt="">
+          </li>
+          <li class="team_clients__item">
+            <img src="img/clients/clients.webp" alt="">
+          </li>
+          <li class="team_clients__item">
+            <img src="img/clients/clients.webp" alt="">
+          </li>
+          <li class="team_clients__item">
+            <img src="img/clients/clients.webp" alt="">
+          </li>
+          <li class="team_clients__item">
+            <img src="img/clients/clients.webp" alt="">
+          </li>
+          <li class="team_clients__item">
+            <img src="img/clients/clients.webp" alt="">
+          </li>
+        </ul>
+      </div>
+    </section>
     <footer class="footer" data-scroll-section>
       <div class="container footer__container">
         <div class="footer__block">
