--- a/team.html
+++ b/team.html
@@ -175,60 +175,108 @@
                 <div class="team_slider_block">
                   <img src="img/team/team_1.webp" alt="">
                 </div>
+                <div class="team_slider_info">
+                  <h4 class="team_slider_name">Алина Алинова</h4>
+                  <p class="team_slider_job">Финансовый трекер</p>
+                </div>
               </li>
               <li class="team_slider__item swiper-slide">
                 <div class="team_slider_block">
                   <img src="img/team/team_2.webp" alt="">
+                </div>
+                <div class="team_slider_info">
+                  <h4 class="team_slider_name">Алина Алинова</h4>
+                  <p class="team_slider_job">Финансовый трекер</p>
                 </div>
               </li>
               <li class="team_slider__item swiper-slide">
                 <div class="team_slider_block">
                   <img src="img/team/team_3.webp" alt="">
                 </div>
+                <div class="team_slider_info">
+                  <h4 class="team_slider_name">Алина Алинова</h4>
+                  <p class="team_slider_job">Финансовый трекер</p>
+                </div>
               </li>
               <li class="team_slider__item swiper-slide">
                 <div class="team_slider_block">
                   <img src="img/team/team_4.webp" alt="">
+                </div>
+                <div class="team_slider_info">
+                  <h4 class="team_slider_name">Алина Алинова</h4>
+                  <p class="team_slider_job">Финансовый трекер</p>
                 </div>
               </li>
               <li class="team_slider__item swiper-slide">
                 <div class="team_slider_block">
                   <img src="img/team/team_5.webp" alt="">
                 </div>
+                <div class="team_slider_info">
+                  <h4 class="team_slider_name">Алина Алинова</h4>
+                  <p class="team_slider_job">Финансовый трекер</p>
+                </div>
               </li>
               <li class="team_slider__item swiper-slide">
                 <div class="team_slider_block">
                   <img src="img/team/team_6.webp" alt="">
+                </div>
+                <div class="team_slider_info">
+                  <h4 class="team_slider_name">Алина Алинова</h4>
+                  <p class="team_slider_job">Финансовый трекер</p>
                 </div>
               </li>
               <li class="team_slider__item swiper-slide">
                 <div class="team_slider_block">
                   <img src="img/team/team_1.webp" alt="">
                 </div>
+                <div class="team_slider_info">
+                  <h4 class="team_slider_name">Алина Алинова</h4>
+                  <p class="team_slider_job">Финансовый трекер</p>
+                </div>
               </li>
               <li class="team_slider__item swiper-slide">
                 <div class="team_slider_block">
                   <img src="img/team/team_2.webp" alt="">
+                </div>
+                <div class="team_slider_info">
+                  <h4 class="team_slider_name">Алина Алинова</h4>
+                  <p class="team_slider_job">Финансовый трекер</p>
                 </div>
               </li>
               <li class="team_slider__item swiper-slide">
                 <div class="team_slider_block">
                   <img src="img/team/team_3.webp" alt="">
                 </div>
+                <div class="team_slider_info">
+                  <h4 class="team_slider_name">Алина Алинова</h4>
+                  <p class="team_slider_job">Финансовый трекер</p>
+                </div>
               </li>
               <li class="team_slider__item swiper-slide">
                 <div class="team_slider_block">
                   <img src="img/team/team_4.webp" alt="">
+                </div>
+                <div class="team_slider_info">
+                  <h4 class="team_slider_name">Алина Алинова</h4>
+                  <p class="team_slider_job">Финансовый трекер</p>
                 </div>
               </li>
               <li class="team_slider__item swiper-slide">
                 <div class="team_slider_block">
                   <img src="img/team/team_5.webp" alt="">
                 </div>
+                <div class="team_slider_info">
+                  <h4 class="team_slider_name">Алина Алинова</h4>
+                  <p class="team_slider_job">Финансовый трекер</p>
+                </div>
               </li>
               <li class="team_slider__item swiper-slide">
                 <div class="team_slider_block">
                   <img src="img/team/team_6.webp" alt="">
+                </div>
+                <div class="team_slider_info">
+                  <h4 class="team_slider_name">Алина Алинова</h4>
+                  <p class="team_slider_job">Финансовый трекер</p>
                 </div>
               </li>
             </ul>
@@ -251,28 +299,44 @@
         </div>
         <ul class="team_clients__list">
           <li class="team_clients__item">
-            <img src="img/clients/clients.webp" alt="">
+            <div class="team_clients_block">
+              <img src="img/clients/clients.webp" alt="">
+            </div>
           </li>
           <li class="team_clients__item">
-            <img src="img/clients/clients.webp" alt="">
+            <div class="team_clients_block">
+              <img src="img/clients/clients.webp" alt="">
+            </div>
           </li>
           <li class="team_clients__item">
-            <img src="img/clients/clients.webp" alt="">
+            <div class="team_clients_block">
+              <img src="img/clients/clients.webp" alt="">
+            </div>
           </li>
           <li class="team_clients__item">
-            <img src="img/clients/clients.webp" alt="">
+            <div class="team_clients_block">
+              <img src="img/clients/clients.webp" alt="">
+            </div>
           </li>
           <li class="team_clients__item">
-            <img src="img/clients/clients.webp" alt="">
+            <div class="team_clients_block">
+              <img src="img/clients/clients.webp" alt="">
+            </div>
           </li>
           <li class="team_clients__item">
-            <img src="img/clients/clients.webp" alt="">
+            <div class="team_clients_block">
+              <img src="img/clients/clients.webp" alt="">
+            </div>
           </li>
           <li class="team_clients__item">
-            <img src="img/clients/clients.webp" alt="">
+            <div class="team_clients_block">
+              <img src="img/clients/clients.webp" alt="">
+            </div>
           </li>
           <li class="team_clients__item">
-            <img src="img/clients/clients.webp" alt="">
+            <div class="team_clients_block">
+              <img src="img/clients/clients.webp" alt="">
+            </div>
           </li>
         </ul>
       </div>
