--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         </button>
         <div class="header__right">
           <div class="header__links">
-            <a class="header__link text text__big" href="#"><span class="text__rotate">Команда</span></a>
-            <a class="header__link text text__big" href="#"><span class="text__rotate">Проекты</span></a>
+            <a class="header__link text text__big" href="team.html"><span class="text__rotate">Команда</span></a>
+            <a class="header__link text text__big" href="projects.html"><span class="text__rotate">Проекты</span></a>
           </div>
           <div class="header__buttons">
             <button class="btn button__project">
