--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
         </div>
       </div>
     </section>
-    <section class="articles" data-scroll-section>
+    <!-- <section class="articles" data-scroll-section>
       <div class="main__border"></div>
       <div class="container articles__container">
         <div class="articles__block">
@@ -621,7 +621,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <footer class="footer" data-scroll-section>
       <div class="container footer__container">
         <div class="footer__block">
