--- a/briefing.html
+++ b/briefing.html
@@ -127,8 +127,34 @@
     <section class="top" data-scroll-section id="top"><div class="main__border"></div></section>
     <section class="briefing" data-scroll-section>
       <div class="main__border"></div>
-      <div class="briefing__block">
+      <div class="container briefing__container">
+        <div class="briefing__block">
+          <div class="briefing__left">
+            <div class="briefing__info">
+              <h1 class="briefing__head">БРИФИНГ</h1>
+              <p class="briefing__desc">Это необходимо, чтобы детально представлять минимальные требования и пожелания к сайту, поможет выстроить правильные взаимоотношения на основе которых мы будем составлять техническое задание, а так же чтобы грамотно сделать для вас коммерческое предложение.</p>
+            </div>
+            <div class="briefing__steps">
+              <h4 class="briefing__steps_head">
+                <span class="briefing__steps_one active">Шаг 1 - Общая информация</span>
+                <span class="briefing__steps_two">Шаг 2 - О продукте</span>
+                <span class="briefing__steps_three">Шаг 3 - Конкуренты и референсы</span>
+                <span class="briefing__steps_four">Шаг 4 - Аудитория</span>
+                <span class="briefing__steps_five">Шаг 5 - Дополнительно</span>
+              </h4>
+              <div class="briefing__steps_flex">
+                <button class="briefing__step briefing__step_one active"></button>
+                <button class="briefing__step briefing__step_two"></button>
+                <button class="briefing__step briefing__step_three"></button>
+                <button class="briefing__step briefing__step_four"></button>
+                <button class="briefing__step briefing__step_five"></button>
+              </div>
+            </div>
+          </div>
+          <div class="briefing__right">
 
+          </div>
+        </div>
       </div>
     </section>
     <footer class="footer" data-scroll-section>
