--- a/project.html
+++ b/project.html
@@ -720,7 +720,7 @@
                   <small>Error message</small>
                 </div>
                 <div class="header__forms_form_control">
-                  <input class="header__forms_form_input" type="tel" minlength="5" maxlength="20" placeholder="Номер для связи" id="phone" />
+                  <input class="header__forms_form_input" type="number" minlength="5" maxlength="20" placeholder="Номер для связи" id="phone" />
                   <span class="header__forms_form_bar"></span>
                   <span class="header__forms_form_border"></span>
                   <small>Error message</small>
